# CL_helper

./: .env.example  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
flows/: backfill.py  daily_etl.py  refresh_metrics.py
notebooks/: README.md
output/: cl_2025_matches.csv  cl_2025_scorers.csv  cl_2025_summary.json  cl_2025_teams.csv
scripts/: fetch_champions_league_2025.py
sql/gold/: team_form.sql
sql/silver/: matches.sql
sql/utils/: 00_init.sql
src/footballdata/: config.py
src/footballdata/extract/: football_data_api.py  odds_api.py
src/footballdata/io/: duckdb_client.py
src/footballdata/metrics/: feature_builders.py
src/footballdata/transform/: normalize.py
src/footballdata/utils/: idempotency.py  logging.py
